argocd/infra/argocd/argocd-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-internal-route
  namespace: argocd
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["argocd.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service
        name: argocd-server
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
